phases/08-private-container-registry/solution/apps/envoy-gateway/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
    name: envoy
spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: public-gateway
    namespace: envoy-gateway
spec:
    gatewayClassName: envoy
    listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
              namespaces:
                  from: Selector
                  selector:
                      matchLabels:
                          expose-via-gateway: "true"
        - name: https
          protocol: HTTPS
          port: 443
          tls:
              mode: Terminate
              certificateRefs:
                  - name: gateway-tls-secret
                    namespace: envoy-gateway
          allowedRoutes:
              namespaces:
                  from: Selector
                  selector:
                      matchLabels:
                          expose-via-gateway: "true"
